ex_3.6/todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
  namespace: project
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 3000
      targetPort: 3000
